Commit 2. Estructura básica de la web realizada.

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
 </head>
 <body>
 
-	<main class="Main">
-		<nav class="Main-Nav">
-			<li>
-				<ul><a href="#">Información personal</a></ul>
-				<ul><a href="#">Cualificaciones</a></ul>
-				<ul><a href="#">Trabajos</a></ul>
-				<ul><a href="#">Contacto</a></ul>
+		<nav class="NavContainer">
+			<li class="NavContainer-List">
+				<ul class="NavContainer-List-Item"><a href="#">Información personal</a></ul>
+				<ul class="NavContainer-List-Item"><a href="#">Cualificaciones</a></ul>
+				<ul class="NavContainer-List-Item"><a href="#">Trabajos</a></ul>
+				<ul class="NavContainer-List-Item"><a href="#">Contacto</a></ul>
 			</li>
 		</nav>
-		<section class="Main-Section">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus dolor eius maxime a mollitia, aspernatur ullam? Quod explicabo error numquam ipsum, consectetur maiores. Est cumque id sit quasi quidem consequatur!
-		</section>
-	</main>
+		<main class="MainContainer">
+			<section class="MainContainer-Content">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus dolor eius maxime a mollitia, aspernatur ullam? Quod explicabo error numquam ipsum, consectetur maiores. Est cumque id sit quasi quidem consequatur!</p>
+			</section>
+			
+		</main>
 	
 </body>
 </html>
