Commit 3. Modificado visual container Main y añadidos botones en los enlaces.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 		<nav class="NavContainer">
 			<li class="NavContainer-List">
-				<ul class="NavContainer-List-Item"><a href="#">Información personal</a></ul>
-				<ul class="NavContainer-List-Item"><a href="#">Cualificaciones</a></ul>
-				<ul class="NavContainer-List-Item"><a href="#">Trabajos</a></ul>
-				<ul class="NavContainer-List-Item"><a href="#">Contacto</a></ul>
+				<ul><button class="NavContainer-List-Button" type="button">Información personal</button></ul>
+				<ul><button class="NavContainer-List-Button" type="button">Cualificaciones</button></ul>
+				<ul><button class="NavContainer-List-Button" type="button">Trabajos</button></ul>
+				<ul><button class="NavContainer-List-Button" type="button">Contacto</button></ul>
 			</li>
 		</nav>
 		<main class="MainContainer">
