--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="cache-control" content="max-age=0" />
+	<meta http-equiv="cache-control" content="no-cache" />
+	<meta http-equiv="cache-control" content="no-store" />
+	<meta http-equiv="expires" content="0" />
+	<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+	<meta http-equiv="pragma" content="no-cache" />
 	<link rel="stylesheet" type="text/css" href="styles/vendors/normalize.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
