Commit 17. Información en página de contactos añadida. Falta captcha

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 		<button class="NavContainer-Button NavContainer-Button-First" type="button" data-button="me">
 			<span class="icon-user"></span>
 		</button>
-		<button class="NavContainer-Button" type="button" data-button="studies">
+		<button class="NavContainer-Button colorNavButton" type="button" data-button="studies">
 			<span class="icon-study"></span>
 		</button>
-		<button class="NavContainer-Button" type="button" data-button="portfolio">
+		<button class="NavContainer-Button colorNavButton" type="button" data-button="portfolio">
 			<span class="icon-wallet"></span>
 		</button>
-		<button class="NavContainer-Button NavContainer-Button-Last" type="button" data-button="contact">
+		<button class="NavContainer-Button NavContainer-Button-Last colorNavButton" type="button" data-button="contact">
 			<span class="icon-mail"></span>
 		</button>
 	</nav>
